fix comment border & align score & sum of reviews

--- a/stp/emails/JMsvM7FYjA2jyztuKknZXmRPceNJipObBClNaJHQ/styles.css
+++ b/stp/emails/JMsvM7FYjA2jyztuKknZXmRPceNJipObBClNaJHQ/styles.css
@@ -480,7 +480,7 @@
     margin: 0 10px; }
   .yotpo .yotpo-comments-box {
     margin-left: 22px;
-    border-left: 6px solid #eeeeee;
+    border-left: 6px solid #eeeeee !important;
     margin-top: 25px; }
     .yotpo .yotpo-comments-box .yotpo-comment-box {
       margin-left: 22px;
@@ -649,6 +649,7 @@
     width: 100%;
     display: none;
     -webkit-box-shadow: 2px 2px 10px #a6a6a6;
+    border-top: 1px #eeeeee solid;
     overflow: hidden; }
   .yotpo .yotpo-display-wrapper.write-only .write-review-wrapper {
     -webkit-box-shadow: none;
@@ -1063,19 +1064,17 @@
       .yotpo.yotpo-main-widget .yotpo-bottomline .yotpo-stars {
         padding-right: 10px;
         display: inline-block;
-        vertical-align: bottom;
-        padding-bottom: 2px; }
+        vertical-align: bottom; }
       .yotpo.yotpo-main-widget .yotpo-bottomline .yotpo-star-digits {
         font-size: 24px;
         font-weight: bolder;
         position: relative;
-        top: 11px;
-        bottom: 2px;
-      }
+        vertical-align: bottom;
+        bottom: 2px; }
       .yotpo.yotpo-main-widget .yotpo-bottomline .yotpo-icon-star, .yotpo.yotpo-main-widget .yotpo-bottomline .yotpo-icon-half-star, .yotpo.yotpo-main-widget .yotpo-bottomline .yotpo-icon-empty-star {
         font-size: 26px; }
       .yotpo.yotpo-main-widget .yotpo-bottomline .yotpo-sum-reviews {
-        padding: 5px 0px;
+        padding-bottom: 2px;
         display: inline-block; 
         position: relative !important;
         left: 2px !important;
